debug for webrtc

--- a/myFavorite/static/test.html
+++ b/myFavorite/static/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>p4 is cool</title>
+	<title>Inband Network Telemetry</title>
 </head>
 <body>
    <h1><center>Int is interesting</h1>
